--- a/css/styles.css
+++ b/css/styles.css
@@ -475,7 +475,8 @@ hr {
 
 .informacion__titulo {
   text-align: center;
-  margin-bottom: 10px;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .informacion__texto {
