--- a/css/styles.css
+++ b/css/styles.css
@@ -332,7 +332,6 @@ footer {
   padding: 1rem 0rem;
   display: flex;
   justify-content: space-between;
-  align-items: center;
 }
 
 .footer__lista {
@@ -484,4 +483,62 @@ hr {
   margin-bottom: 10px !important;
   width: 80%;
   margin: auto;
+}
+
+/* LOGIN Y REGISTRO */
+
+.formulario {
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 2rem;
+}
+
+.formulario__titulo {
+  font-size: 2rem;
+}
+
+.contenedor__input {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  width: 80%;
+}
+
+.formulario__input {
+  width: 100%;
+  padding: 1rem;
+}
+
+.formulario__boton {
+  padding: 1rem 4rem;
+  border-radius: 15px;
+  outline: none;
+  border: none;
+  background-color: #333;
+  color: white;
+  font-weight: bold;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.formulario__boton:hover {
+  background-color: black;
+}
+
+@media (max-width: 768px) {
+  .formulario {
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    margin: auto;
+  }
+
+  .contenedor__input {
+    width: 80%;
+    align-items: center;
+  }
 }
